-- Morider App - initial schema
-- Executed automatically by the postgis/postgis image on first boot
-- (mounted into /docker-entrypoint-initdb.d).

CREATE EXTENSION IF NOT EXISTS postgis;

-- ---------------------------------------------------------------------------
-- users
-- ---------------------------------------------------------------------------
CREATE TABLE IF NOT EXISTS users (
    id            BIGSERIAL PRIMARY KEY,
    name          TEXT        NOT NULL,
    email         TEXT        NOT NULL UNIQUE,
    password_hash TEXT        NOT NULL,
    country       TEXT,
    created_at    TIMESTAMPTZ NOT NULL DEFAULT now(),
    updated_at    TIMESTAMPTZ NOT NULL DEFAULT now()
);

-- ---------------------------------------------------------------------------
-- routes (planned paths, stored as a PostGIS linestring)
-- ---------------------------------------------------------------------------
CREATE TABLE IF NOT EXISTS routes (
    id          BIGSERIAL PRIMARY KEY,
    user_id     BIGINT      NOT NULL REFERENCES users(id) ON DELETE CASCADE,
    name        TEXT        NOT NULL,
    description TEXT,
    path        geometry(LineString, 4326),
    distance    DOUBLE PRECISION DEFAULT 0,
    created_at  TIMESTAMPTZ NOT NULL DEFAULT now()
);
CREATE INDEX IF NOT EXISTS idx_routes_user ON routes(user_id);
CREATE INDEX IF NOT EXISTS idx_routes_path ON routes USING GIST(path);

-- ---------------------------------------------------------------------------
-- rides (recorded trips)
-- ---------------------------------------------------------------------------
CREATE TABLE IF NOT EXISTS rides (
    id             BIGSERIAL PRIMARY KEY,
    user_id        BIGINT      NOT NULL REFERENCES users(id) ON DELETE CASCADE,
    route_id       BIGINT      REFERENCES routes(id) ON DELETE SET NULL,
    start_time     TIMESTAMPTZ,
    end_time       TIMESTAMPTZ,
    distance       DOUBLE PRECISION DEFAULT 0,
    avg_speed      DOUBLE PRECISION DEFAULT 0,
    elevation_gain DOUBLE PRECISION DEFAULT 0,
    created_at     TIMESTAMPTZ NOT NULL DEFAULT now()
);
CREATE INDEX IF NOT EXISTS idx_rides_user ON rides(user_id);

-- ---------------------------------------------------------------------------
-- telemetry_points (GPS samples for a ride)
-- ---------------------------------------------------------------------------
CREATE TABLE IF NOT EXISTS telemetry_points (
    id        BIGSERIAL PRIMARY KEY,
    ride_id   BIGINT      NOT NULL REFERENCES rides(id) ON DELETE CASCADE,
    ts        TIMESTAMPTZ NOT NULL DEFAULT now(),
    lat       DOUBLE PRECISION NOT NULL,
    lon       DOUBLE PRECISION NOT NULL,
    altitude  DOUBLE PRECISION,
    speed     DOUBLE PRECISION,
    geom      geography(Point, 4326)
);
CREATE INDEX IF NOT EXISTS idx_telemetry_ride ON telemetry_points(ride_id);
CREATE INDEX IF NOT EXISTS idx_telemetry_geom ON telemetry_points USING GIST(geom);

-- ---------------------------------------------------------------------------
-- rewards (badges / points earned)
-- ---------------------------------------------------------------------------
CREATE TABLE IF NOT EXISTS rewards (
    id           BIGSERIAL PRIMARY KEY,
    user_id      BIGINT      NOT NULL REFERENCES users(id) ON DELETE CASCADE,
    type         TEXT        NOT NULL,
    description  TEXT,
    awarded_at   TIMESTAMPTZ NOT NULL DEFAULT now()
);
CREATE INDEX IF NOT EXISTS idx_rewards_user ON rewards(user_id);

-- Note: create users through POST /api/auth/signup so the password hash is
-- generated by the auth service. No seed user is inserted here.
